<resources>
    <string name="app_name">Cinema</string>
    <string name="session_expired_label">Sessione scaduta</string>
    <string name="img_content_descriptor">cinema_screen</string>
    <string name="err_session_finished">Sessione scaduta</string>

    <!-- SEZIONE SPLASH SCREEN -->
    <string name="splash_welcome">Developed and designed by ITS Padova</string>

    <!-- SEZIONE LOGIN REGISTER -->
    <string name="accedi_prompt">Accedi</string>
    <string name="registra_prompt">Registrati</string>
    <string name="registra_successo">Registrato con successo!</string>
    <string name="chkRemeberMe">Ricorda le mie credenziali</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Conferma password</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_cognome">Cognome</string>
    <string name="prompt_forgot_pssw">Password dimenticata?</string>
    <string name="back_to_login">Torna al login</string>
    <string name="prompt_policy">Accetto i termini del contratto</string>
    <string name="goToRegisterLink1">Non hai ancora un account?\n</string>
    <string name="goToRegisterLink2">Creane uno!</string>
    <string name="must_accept_contrat">Devi accettare il contratto per proseguire</string>
    <string name="err_nome">Inserisci un nome</string>
    <string name="err_cognome">Inserisci un cognome</string>
    <string name="err_mail">Inserisci una mail valida</string>
    <string name="err_passw">La password deve essere minimo di 8 caratteri</string>
    <string name="err_passw_conf">Le due password non coincidono</string>
    <string name="err_user_not_found">L\'utente non esiste, controllare i dati immessi</string>
    <string name="err_passw_solo_numeri">La password deve contenere almeno una lettera maiuscola e minuscola</string>
    <string name="err_passw_solo_minuscole">La password deve contenere almeno una lettera maiuscola e un numero</string>
    <string name="err_passw_solo_maiuscole">La password deve contenere almeno una lettera minuscola e un numero</string>
    <string name="err_passw_manca_maiuscola">La password deve contenere almeno una lettera maiuscola</string>
    <string name="err_passw_manca_minuscola">La password deve contenere almeno una lettera minuscola</string>
    <string name="err_passw_manca_numero">La password deve contenere almeno un numero</string>

    <!-- DIALOG per il recupero password -->
    <string name="dialog_title">Recupera la tua password</string>
    <string name="tvResultPssw">Password recuperata: %1$s</string>
    <string name="tvNoResultPssw">Nessuna password trovata</string>

    <!-- SEZIONE LISTA FILM -->
    <string name="film_list_title">Film disponibili</string>
    <string name="error_film_click">Non disponibile</string>

    <!-- SEZIONE DETTAGLI FILM -->
    <string name="film_details_title">Dettaglio film</string>
    <string name="btnPrenota">Avanti</string>
    <string name="prompt_error_prenotazione">Seleziona il giorno e l\'ora</string>
    <string name="prompt_error_general">Ops, qualcosa non funziona</string>
    <string name="dialog_day_title">Seleziona la data</string>
    <string name="dialog_time_title">Seleziona l\'ora</string>

    <!-- SEZIONE SELEZIONE POSTI -->
    <string name="posti_title">Seleziona i posti</string>
    <string name="btn_next_label">Avanti</string>
    <string name="error_posti_max">Puoi selezionare massimo 4 posti</string>
    <string name="error_posti_min">Seleziona almeno un posto!</string>

    <!-- SEZIONE RIASSUNTO PRENOTAZIONE -->
    <string name="resume_title">Riepilogo</string>
    <string name="tvTitoloLabel">Titolo</string>
    <string name="tvDataLabel">Data</string>
    <string name="tvSalaLabel">Sala</string>
    <string name="tvOraLabel">Ora</string>
    <string name="tvPostiPrenotatiLabel">Prenotati i posti numero</string>
    <string name="tvIdSessioneLabel">ID sessione</string>
    <string name="btn_buy_label">Acquista</string>
    <string name="tvDurataFilm">%1$d minuti</string>
    <string name="tvNumeroPosto">Posto %1$d</string>
    <string name="hintPrenotazione">Tieni premuto sul biglietto per acquistare!</string>
    <string name="hintPrenotazioneEffettuata">Biglietto già acquistato!</string>
    <string name="promptPrenotatoText">Biglietto acquistato!</string>
    <string name="exitPrenotazioneDialogTitle">Attenzione</string>
    <string name="exitPrenotazioneDialogDescr">Non hai ancora confermato la prenotazione, sicuro di tornare indietro?</string>
    <string name="snackAnnullataPrenotazione">Prenotazione annullata!</string>
    <string name="snackConfermaPrenotazione">Biglietto acquistato!</string>

    <!-- SEZIONE TERMINI DEL CONTRATTO -->
    <string name="terms">Raccogliamo i contenuti, le comunicazioni e le altre informazioni che fornisci quando usi i nostri Prodotti, anche quando crei un account, prenoti un film. \n
        Può trattarsi di informazioni presenti nei contenuti forniti o relative a essi (come i metadati), quali la posizione di una foto o la data in cui è stato creato un file. \n
        Ciò comprende anche gli elementi visualizzati attraverso le funzioni che offriamo (ad es. la nostra fotocamera), che ci consentono di effettuare azioni come suggerire maschere e filtri che potrebbero piacerti o fornirti consigli sull\'uso della modalità ritratto.\n
        I nostri sistemi trattano automaticamente contenuti e comunicazioni che tu o altri fornite per analizzarne contesto e contenuti per le finalità descritte qui sotto. Scopri di più su come controllare chi può vedere i contenuti condivisi. \n
        Dati sottoposti a protezione speciale: puoi scegliere di fornire informazioni nei campi del profilo o negli avvenimenti importanti di Facebook in merito a orientamento religioso, orientamento politico, opzione \"Mi piacciono\" o salute. \n
        Queste e altre informazioni (ad es. origine razziale o etnica, credo filosofico o appartenenza a un sindacato) sono soggette a protezioni speciali ai sensi della legge UE.
    </string>

    <!-- SEZIONE INFO APP OPTIONS MENU -->
    <string name="titolo_app">ITS Cinema</string>
    <string name="app_version">Versione 1</string>
    <string name="reserved">© 2018 ITS Padova Inc.\n All rights reserved</string>
    <string name="account">Account</string>
    <string name="nomi">Creato da: \nAmbrosi, Baldan, Baruch, Bonin, Canova, Caviola, Ceretta, Cozza, Dal Santo, De Benetti, Lasta, Littamè, Ly, Marchi, Matvei, Miftah, Pagiaro, Pertile, Raimondi</string>
    <string name="info">Info App</string>
    <string name="esci">Esci</string>
    
    <!-- SEZIONE ALERT PER USCIRE -->
    <string name="msg_esci">Sei sicuro di voler uscire?</string>
    <string name="msg_si">SI</string>
    <string name="msg_annulla">Annulla</string>

</resources>
