<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resumeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".riassunto.ResumeActivity">

    <TextView
        android:id="@+id/tvTitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tvTitoloLabel"
        android:textColor="@color/primaryTextColorWhite"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGenere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Genere"
        android:textColor="@color/secondaryTextColorWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitolo" />

    <TextView
        android:id="@+id/tvDurata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Durata"
        android:textColor="@color/secondaryTextColorWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvGenere"
        app:layout_constraintTop_toBottomOf="@+id/tvTitolo" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="Data"
        android:textColor="@color/secondaryTextColorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tvOrario"
        app:layout_constraintTop_toBottomOf="@+id/tvTitolo" />

    <TextView
        android:id="@+id/tvOrario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Orario"
        android:textColor="@color/secondaryTextColorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tvPostiPrenotatiLabel"
        android:textColor="@color/primaryTextColorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenere" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvIdSessione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvIdSessione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tvIdSessioneLabel"
        android:textColor="@color/secondaryTextColorWhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnContainer"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="4dp"
        android:text="34532"
        android:textColor="@color/secondaryTextColorWhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnContainer"
        app:layout_constraintStart_toEndOf="@+id/tvIdSessione" />

    <FrameLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/btn_buy_label" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>